--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello Gradsters
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Gradsters.github.io by Gradsters</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <header class="without-description">
+        <h1>Gradsters.github.io</h1>
+        <p></p>
+        <p class="view"><a href="https://github.com/Gradsters">View the Project on GitHub <small>Gradsters</small></a></p>
+        <ul>
+          <li class="single"><a href="https://github.com/Gradsters/Gradsters.github.io">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h3>
+<a name="a-marketplace-of-master-projects-phd-post-phd-and-internships" class="anchor" href="#a-marketplace-of-master-projects-phd-post-phd-and-internships"><span class="octicon octicon-link"></span></a>A marketplace of master projects, PhD, post-PhD and internships.</h3>
+
+<p>Gradsters is the one-stop source to find graduate research projects and internships</p>
+
+<h3>
+<a name="find-talent" class="anchor" href="#find-talent"><span class="octicon octicon-link"></span></a>Find talent</h3>
+
+<p>At the same time, we offer researchers a chance to find, connect, and recruit prospective students that best match their needs</p>
+
+<h3>
+<a name="push-boundaries" class="anchor" href="#push-boundaries"><span class="octicon octicon-link"></span></a>Push Boundaries</h3>
+
+<p>We believe in the power of curiosity and discoveries through collaborative higher education. At Gradsters, we create a community and a market place where every available position is filled with the right talent.</p>
+      </section>
+    </div>
+    <footer>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+  </body>
+</html>
